[package]
name = "wnlctl"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Windows Night Light control CLI"
readme = "README.md"
repository = "https://github.com/lucidust/wnlctl"
keywords = ["windows", "night-light", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
win-nightlight-lib = { path = "vendor/win-nightlight-lib" }

[workspace]
members = ["vendor/win-nightlight-lib"]
resolver = "3"
